--- a/quantum_error_project/Makefile
+++ b/quantum_error_project/Makefile
@@ -4,5 +4,5 @@ NAME=qerr_proj
 BIBTEX=true
 USE_PDFLATEX=true
 VIEWPDF=okular
-CLEAN_FILES+=*.backup *.pdf 
+CLEAN_FILES+=*blx.bib *.blg *.aux *.backup *.xml *.bcf *~*
 include /usr/share/latex-mk/latex.gmk
